final commit for demo

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space X Launch Programs</title>
+    <meta name="og:title" content='SpaceX Launch Programs' />
+    <meta httpEquiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="SpaceX Launch Programs" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SpaceX Launch Programs</title>
     <link rel="stylesheet" type="text/css" href="./styles.css" />
 </head>
 
